--- a/adapterlib/build.gradle
+++ b/adapterlib/build.gradle
@@ -18,6 +18,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-annotations:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    provided 'com.android.support:support-annotations:25.3.1'
+    provided 'com.android.support:recyclerview-v7:25.3.1'
 }
