--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.senierr.rvadapter"
+        applicationId "com.senierr.demo.rvadapter"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
@@ -22,5 +22,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile project(':adapterlib')
+    compile project(':library')
 }
