--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.senierr.demo.rvadapter"
+        applicationId "com.senierr.demo.adapter"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
