--- a/multitype/build.gradle
+++ b/multitype/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
@@ -23,6 +24,7 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.40'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
