--- a/multitype/build.gradle
+++ b/multitype/build.gradle
@@ -24,9 +24,8 @@ android {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.40'
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    api 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.40'
+    api 'com.android.support:recyclerview-v7:28.0.0'
 }
 
 /*
@@ -44,8 +43,8 @@ def libName = "MultiTypeAdapter"
 //发布到组织名称名字，必须填写
 group = "com.senierr.adapter"
 // 版本号，下次更新是只需要更改版本号即可
-version = "1.0.1"
-//上面配置后上传至JCenter后的编译路径是这样的： compile 'com.senierr.adapter:multitype:1.0.1'
+version = "1.1.0"
+//上面配置后上传至JCenter后的编译路径是这样的： compile 'com.senierr.adapter:multitype:1.1.0'
 
 //生成源文件
 task sourcesJar(type: Jar) {
