--- a/multitype/build.gradle
+++ b/multitype/build.gradle
@@ -24,8 +24,8 @@ android {
 }
 
 dependencies {
-    api 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.40'
-    api 'androidx.recyclerview:recyclerview:1.0.0'
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.ext.kotlin"
+    api "androidx.recyclerview:recyclerview:$rootProject.ext.recyclerview"
 }
 
 /*
@@ -43,8 +43,8 @@ def libName = "MultiTypeAdapter"
 //发布到组织名称名字，必须填写
 group = "com.senierr.adapter"
 // 版本号，下次更新是只需要更改版本号即可
-version = "2.0.0"
-//上面配置后上传至JCenter后的编译路径是这样的： compile 'com.senierr.adapter:multitype:2.0.0'
+version = "2.1.0"
+//上面配置后上传至JCenter后的编译路径是这样的： compile 'com.senierr.adapter:multitype:2.1.0'
 
 //生成源文件
 task sourcesJar(type: Jar) {
