--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.ext.kotlin"
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appcompat"
     implementation "androidx.recyclerview:recyclerview:$rootProject.ext.recyclerview"
-    implementation project(':multitype')
+//    implementation project(':multitype')
+    implementation 'com.senierr.adapter:multitype:2.2.0'
 }
