--- a/multitype/build.gradle
+++ b/multitype/build.gradle
@@ -1,15 +1,12 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
-
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 30
     }
     buildTypes {
         release {
@@ -28,120 +25,29 @@ dependencies {
     api "androidx.recyclerview:recyclerview:$rootProject.ext.recyclerview"
 }
 
-/*
- * 1. gradlew install
- * 2. gradlew bintrayUpload
- */
+def group = 'com.senierr.adapter'
+def version = '2.3.0'
+def artifactId = 'multitype'
 
-//项目主页
-def siteUrl = 'https://github.com/senierr/MultiTypeAdapter'
-//项目的git地址
-def gitUrl = 'https://github.com/senierr/MultiTypeAdapter.git'
-//发布到JCenter上的项目名字
-def libName = "MultiTypeAdapter"
-
-//发布到组织名称名字，必须填写
-group = "com.senierr.adapter"
-// 版本号，下次更新是只需要更改版本号即可
-version = "2.2.0"
-//上面配置后上传至JCenter后的编译路径是这样的： compile 'com.senierr.adapter:multitype:2.2.0'
-
-//生成源文件
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-
-//生成Javadoc文档
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-
-//文档打包成jar
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-//拷贝javadoc文件
-task copyDoc(type: Copy) {
-    from "${buildDir}/docs/"
-    into "docs"
-}
-
-tasks.getByPath(":multitype:javadoc").enabled = false
-
-//上传到JCenter所需要的源码文件
-artifacts {
-    archives javadocJar
-    archives sourcesJar
-}
-
-// 配置maven库，生成POM.xml文件
-install {
-    repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
-        pom {
-            project {
-                packaging 'aar'
-                //项目描述，随意填
-                name 'Multiple types of item for RecyclerView'
-                url siteUrl
-                licenses {
-                    license {
-                        //开源协议
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-                developers {
-                    developer {
-                        //开发者的个人信息
-                        id 'senierr'
-                        name 'Chunjie'
-                        email 'senierr@gmail.com'
-                    }
-                }
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-                }
+apply plugin: 'maven'
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: ALIYUN_MAVEN_URL) {
+                authentication(
+                        userName: ALIYUN_USERNAME,
+                        password: ALIYUN_PASSWORD
+                )
             }
+            snapshotRepository(url: ALIYUN_MAVEN_URL_SNAPSHOT) {
+                authentication(
+                        userName: ALIYUN_USERNAME,
+                        password: ALIYUN_PASSWORD
+                )
+            }
+            pom.version = version
+            pom.artifactId = artifactId
+            pom.groupId = group
         }
-    }
-}
-
-//上传到JCenter
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-
-bintray {
-    user = properties.getProperty("bintray.user")    //读取 local.properties 文件里面的 bintray.user
-    key = properties.getProperty("bintray.apikey")   //读取 local.properties 文件里面的 bintray.apikey
-    configurations = ['archives']
-    pkg {
-        //这里的repo值必须要和你创建Maven仓库的时候的名字一样
-        repo = "Personal"
-        //发布到JCenter上的项目名字
-        name = libName
-        //项目描述
-        desc = 'Multiple types of item for RecyclerView'
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = ["Apache-2.0"]
-        publish = true
-    }
-}
-
-javadoc {
-    options {
-        //如果你的项目里面有中文注释的话，必须将格式设置为UTF-8，不然会出现乱码
-        encoding "UTF-8"
-        charSet 'UTF-8'
-        author true
-        version true
-        links "http://docs.oracle.com/javase/7/docs/api"
     }
 }
