更新中å托管仓库为mavenCenter

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,41 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-ALIYUN_MAVEN_URL=
-ALIYUN_MAVEN_URL_SNAPSHOT=
-ALIYUN_USERNAME=
-ALIYUN_PASSWORD=
+# sonatype新建时的那个group id
+GROUP=io.github.senierr
+# library的名字
+POM_ARTIFACT_ID=multitype
+# library的版本号
+VERSION_NAME=3.0.0
+
+#以上这三个配置决定lelibrary最终的路径 io.github.shiweibsw:bannerx:1.1.1
+
+# 下边POM这些配置替换成你的library参数即可。
+POM_NAME=MultiTypeAdapter
+POM_DESCRIPTION=Adapter for RecyclerView.
+POM_INCEPTION_YEAR=2020
+POM_URL=https://github.com/senierr/MultiTypeAdapter/
+
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=repo
+
+POM_SCM_URL=https://github.com/senierr/MultiTypeAdapter/
+POM_SCM_CONNECTION=scm:git:git://github.com/senierr/MultiTypeAdapter.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/senierr/MultiTypeAdapter.git
+
+# 开发者信息
+POM_DEVELOPER_ID=senierr
+POM_DEVELOPER_NAME=senierr
+POM_DEVELOPER_URL=https://github.com/senierr/
+
+# GPG密钥后8位
+signing.keyId=36DBB494
+# 申请GPG密钥时的那个密码
+signing.password=***
+# GPG密钥路径
+signing.secretKeyRingFile=../secring.gpg
+
+# 登录maven 的账号密码，也就是最开始申请那个sonatype账号密码
+mavenCentralUsername=***
+mavenCentralPassword=***
