--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
+
     defaultConfig {
         applicationId "com.senierr.demo.adapter"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -21,9 +22,9 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.ext.kotlin"
-    implementation "androidx.appcompat:appcompat:$rootProject.ext.appcompat"
-    implementation "androidx.recyclerview:recyclerview:$rootProject.ext.recyclerview"
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 //    implementation project(':multitype')
     implementation 'com.senierr.adapter:multitype:2.2.0'
 }
