--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32'
-
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.18.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,37 +14,11 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
-
-        maven {
-            url 'https://maven.aliyun.com/repository/public'
-        }
-        maven {
-            credentials {
-                username ALIYUN_USERNAME
-                password ALIYUN_PASSWORD
-            }
-            url ALIYUN_MAVEN_URL
-        }
-        maven {
-            credentials {
-                username ALIYUN_USERNAME
-                password ALIYUN_PASSWORD
-            }
-            url ALIYUN_MAVEN_URL_SNAPSHOT
-        }
+        mavenCentral()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    // 语言
-    kotlin = "1.4.32"
-    // androidx
-    appcompat = "1.2.0"
-    recyclerview = "1.1.0"
 }
