--- a/multitype/build.gradle
+++ b/multitype/build.gradle
@@ -1,12 +1,15 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'com.vanniktech.maven.publish'
+}
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 31
     }
     buildTypes {
         release {
@@ -21,33 +24,27 @@ android {
 }
 
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.ext.kotlin"
-    api "androidx.recyclerview:recyclerview:$rootProject.ext.recyclerview"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
 
-def group = 'com.senierr.adapter'
-def version = '2.3.0'
-def artifactId = 'multitype'
+// Note: To prevent looping behavior, especially in Kotlin projects / modules, you need to run the task with and flagspublish--no-daemon--no-parallel
+// 使用以下命令发布：./gradlew publish --no-daemon --no-parallel
 
-apply plugin: 'maven'
-uploadArchives {
+allprojects {
+    plugins.withId("com.vanniktech.maven.publish") {
+        mavenPublish {
+            sonatypeHost = "S01"
+        }
+    }
+}
+
+publishing {
     repositories {
-        mavenDeployer {
-            repository(url: ALIYUN_MAVEN_URL) {
-                authentication(
-                        userName: ALIYUN_USERNAME,
-                        password: ALIYUN_PASSWORD
-                )
-            }
-            snapshotRepository(url: ALIYUN_MAVEN_URL_SNAPSHOT) {
-                authentication(
-                        userName: ALIYUN_USERNAME,
-                        password: ALIYUN_PASSWORD
-                )
-            }
-            pom.version = version
-            pom.artifactId = artifactId
-            pom.groupId = group
+        maven {
+            def releasesRepoUrl = "$buildDir/repos/releases"
+            def snapshotsRepoUrl = "$buildDir/repos/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
         }
     }
 }
