maven仓库迁移至jitpack.io

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,22 @@
-include ':app', ':multitype'
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://www.jitpack.io" }
+        gradlePluginPortal()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://www.jitpack.io" }
+    }
+}
+
+rootProject.name = "MuitiTypeAdapter"
+include ':app'
+include ':multitype'
+
