--- a/multitype/build.gradle
+++ b/multitype/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.library'
-    id 'kotlin-android'
-    id 'com.vanniktech.maven.publish'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -24,27 +23,6 @@ android {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.10'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-}
-
-// Note: To prevent looping behavior, especially in Kotlin projects / modules, you need to run the task with and flagspublish--no-daemon--no-parallel
-// 使用以下命令发布：./gradlew publish --no-daemon --no-parallel
-
-allprojects {
-    plugins.withId("com.vanniktech.maven.publish") {
-        mavenPublish {
-            sonatypeHost = "S01"
-        }
-    }
-}
-
-publishing {
-    repositories {
-        maven {
-            def releasesRepoUrl = "$buildDir/repos/releases"
-            def snapshotsRepoUrl = "$buildDir/repos/snapshots"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-        }
-    }
 }
